--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,21 @@
-#date{
-    text-align: right;
+.center{
     margin-right: 20%;
     margin-left: 20%;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-right: 4px;
+}
+
+#date{
+    text-align: right;
     border-style: solid;
     border-width: 0px 0px 0px 3px;
     border-color: #0288D1;
     background-color: #B3E5FC;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-right: 4px;
     font-size: 25px
 }
 #notesInput{
-    margin-left: 20%;
-    margin-right: 20%;
-    width: 60%;
+    width: 100%;
     height: 50%;
+    text-align: justify;
 }
