--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,12 @@
     </head>
 
     <body>
+        <h3 style="text-align: center; text-transform: uppercase; margin-top: 20px;">Your personal Diary</h3>
+        <p class="center" id="date">{{ day }} {{ month }}, {{ year }}</p> <br>
 
-        <p id="date">{{ day }} {{ month }}, {{ year }}</p> <br>
-
-        <form action="{{ url_for('addNotes')}}" method="POST">
-            <input id="notesInput" type="text" name="notes" value="{{ preText }}">
+        <form class="center" action="{{ url_for('addNotes')}}" method="POST">
+            <textarea id="notesInput" name="notes">{{ preText }}</textarea>
+            <br><br><br>
             <input type="submit" value="Make Note">
         </form>
     </body>
