--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .center{
     margin-right: 20%;
     margin-left: 20%;
@@ -12,10 +15,30 @@
     border-width: 0px 0px 0px 3px;
     border-color: #0288D1;
     background-color: #B3E5FC;
-    font-size: 25px
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #notesInput{
     width: 100%;
     height: 50%;
     text-align: justify;
+    border-width: 2px;
+}
+
+#submitButton{
+    width: 100%;
+    height: 40px;
+    font-size: 20px;
+    background-color: #00BCD4;
+    color: #ffffff;
+}
+
+h2{
+    text-align: center; 
+    text-transform: uppercase; 
+    margin-top: 20px;
+}
+
+textarea{
+    resize: none;
 }
