--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,10 @@
             <br><br><br>
             <input id="submitButton" type="submit" value="Make Note">
         </form>
+
+        <form action="{{ url_for('showPrevNotes') }}" method="POST">
+            <input type="text" name="dateInput">
+            <input type="submit" value="See Notes">
+        </form>
     </body>
 </html>
