--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
             <input id="submitButton" type="submit" value="Make Note">
         </form>
 
-        <form action="{{ url_for('showPrevNotes') }}" method="POST">
-            <input type="text" name="dateInput">
+        <form class="center" id="prevNotesForm" action="{{ url_for('showPrevNotes') }}" method="POST">
+            <input type="text" name="dateInput" placeholder="Inpute Date: DDMMYYYY">
             <input type="submit" value="See Notes">
         </form>
     </body>
